feat: upando melhorias no codigo

--- a/extra.html
+++ b/extra.html
@@ -39,7 +39,7 @@
       <ol>
         <li><strong>Primeiro contato:</strong> Comecei como monitora de informática básica e aprendi sobre as diferentes tecnologias da informação.</li>
         <li><strong>Migração para tecnologia:</strong> Estava desgostosa com a vida acadêmica e resolvi me desafiar num bootcamp de programação.</li>
-        <li><strong>Primeiro emprego:</strong> Após a conclusão do bootcamp, consegui um emprego como Analista de Engenharia TI, atuando em projetos backend de Software e Dados.</li>
+        <li><strong>Emprego:</strong> Após a conclusão do bootcamp, consegui um emprego como Analista de Engenharia TI, atuando em projetos backend de Software e Dados.</li>
         <li><strong>Curso de ADS:</strong> Iniciei Análise e Desenvolvimento de Sistemas</li>
         <li><strong>Contínuo aprendizado:</strong> Sempre explorando novas tecnologias e frameworks</li>
       </ol>
