feat: ajustando seção de projetos

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
       <a class="btn" href="index.html">Início</a>
       <a class="btn" href="contato.html">Contato</a>
       <a class="btn" href="extra.html">Extra</a>
-    </nav>
+      </nav>
   </header>
 
   <main>
     <section id="hero" class="hero container">
       <h2>Olá! Eu sou Anna Olímpio</h2>
       <p>mas pode me chamar de Anna Olímpio e moro em Lavras - MG. Sou Bióloga de formação, agora engenheira de software em construção!</p>
-    <div class="links">
-      <a class="btn" href="https://www.linkedin.com/in/annaolimpio" target="_blank" rel="noopener">&#x1F517; LinkedIn</a>
-      <a class="btn" href="https://github.com/annaolc" target="_blank" rel="noopener">&#x1F517; GitHub</a>
-    </div>      
+      <div class="links">
+        <a class="btn" href="https://www.linkedin.com/in/annaolimpio" target="_blank" rel="noopener">&#x1F517; LinkedIn</a>
+        <a class="btn" href="https://github.com/annaolc" target="_blank" rel="noopener">&#x1F517; GitHub</a>
+      </div>
     </section>
 
     <section id="sobre" class="section container">
@@ -59,6 +59,23 @@
         <li>UI/UX</li>
       </ul>
     </section>
+    
+    <section id="projects" class="section container">
+      <h3>Projetos</h3>
+      <div class="grid">
+        <article class="card">
+          <h4>Portfolio Pessoal</h4>
+          <p>Site pessoal responsivo desenvolvido com HTML, CSS e JavaScript puro para o desafio final de Front-end I.</p>
+          <div class="tech">
+            Tecnologias: HTML5, CSS3, JavaScript, Responsive Design
+          </div>
+          <div class="links">
+            <a class="btn" href="https://github.com/annaolc/web-page-portfolio" target="_blank" rel="noopener">Demo</a>
+            <a class="btn" href="https://github.com/annaolc/web-page-portfolio" target="_blank" rel="noopener">Repo</a>
+          </div>
+        </article>
+        </div>
+    </section>
 
     <section id="contato" class="section container">
       <h3>Contato</h3>
@@ -74,5 +91,5 @@
     <p>© 2025 Anna Alexandre Olimpio do Carmo. Todos os direitos reservados.</p>
   </footer>
 
-</body>
+  </body>
 </html>
